csi/rook/app.test-rbd.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: test-rbd
  name: test-rbd
  namespace: default
spec:
  selector:
    matchLabels:
      app: test-rbd
  template:
    metadata:
      labels:
        app: test-rbd
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - name: test-rbd
            mountPath: /var/lib/www/html
      volumes:
        - name: test-rbd
          persistentVolumeClaim:
            claimName: test-rbd
            readOnly: false
